[package]
name = "rm-rfp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rm-rfp"
path = "rm-rfp.rs"

# I shouldn't need these! `cargo test` finds them just fine but rust-analyzer does not!
[[test]]
name="integration"
path="tests/integration.rs"

[dependencies]
anyhow = "1"
indicatif = "0.17"
docopt = "1"
serde = { version = "1.0", features = ["derive"] } # for docopt

[dev-dependencies]
tempfile = "3"
